fixed line-height for wrapping headlines

--- a/source/2015/components/_speakers.sass
+++ b/source/2015/components/_speakers.sass
@@ -90,7 +90,6 @@
     transform: translateZ(0)
 
 .speaker-details
-  line-height: 1.5em
   display: block
   clear: both
 
